testdata/parser/ok/MainLocals.java
int main() {
		int x;
		int y;
		x = 1;
		y = x;
		return 0;
}