testdata/parser/error/BadAssignmentError.java
int main() {
        1 = 5*3;
    	return 0;
}